Fixed select box overflow bug

--- a/assets/scss/decisions.scss
+++ b/assets/scss/decisions.scss
@@ -77,13 +77,15 @@
 
         .govuk-select {
             width: 100%;
+            @include govuk-media-query(tablet, 730px) {
+                min-width: calc(100% + 25px);
+            }
         }
 
         .govuk-button {
             margin-top: 20px;
         }
     }
-
 }
 
 .decision-count {
