--- a/assets/scss/job-listings.scss
+++ b/assets/scss/job-listings.scss
@@ -1,6 +1,9 @@
 .job-listing-filter-form {
 	.govuk-select {
 		width: 100%;
+		@include govuk-media-query(tablet, 730px) {
+			min-width: calc(100% + 25px);
+		}
 	}
 }
 .job-list-item {
