--- a/assets/scss/listing.scss
+++ b/assets/scss/listing.scss
@@ -10,15 +10,17 @@
           font-weight: bold;
           margin-top: 20px;
         }
-    
+
         .govuk-label {
           margin-top: 10px;
         }
-    
+
         .govuk-select {
           width: 100%;
+          @include govuk-media-query(tablet, 730px) {
+            min-width: calc(100% + 25px);
+          }
         }
-    
       }
     }
     .listing-item-count {
