--- a/assets/scss/news.scss
+++ b/assets/scss/news.scss
@@ -40,6 +40,9 @@
 
     .govuk-select {
       width: 100%;
+      @include govuk-media-query(tablet, 730px) {
+        min-width: calc(100% + 25px);
+      }
     }
 
     .govuk-button {
